[package]
name = "futurify"
description = "Convert your sync functions into non-thread blocking futures"
license = "MIT"
repository ="https://github.com/robertohuertasm/futurify"
readme = "README.md"
keywords = ["futures", "spawn", "threading", "background", "non-blocking"]
version = "0.1.0"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
edition = "2018"
categories = ["asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"